fixed alignment

--- a/src/main/webapp/mystyle.css
+++ b/src/main/webapp/mystyle.css
@@ -63,6 +63,11 @@ td a {
     text-decoration: none;
 }
 
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
+}
 .rating > input{
     display: none;
 }
@@ -78,7 +83,7 @@ td a {
 
 .rating > input:checked ~ label,
 .rating:not(:checked) > label:hover,
-.rating:not(:checked) > label:hover ~ label{ color: Blue;}
+.rating:not(:checked) > label:hover ~ label{color: Blue;}
 
 .rating > input:checked + label:hover,
 .rating > input:checked ~ label:hover,
